# Godot-Project-Template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  ci.yml
cpp/: CMakeLists.txt
cpp/doc_classes/: MyNode.xml
cpp/include/engine/: Time.hpp
cpp/include/godot/: MyNode.hpp
cpp/src/: register_types.cpp
cpp/src/engine/: Time.cpp
cpp/src/godot/: MyNode.cpp
godot/project/: extension.gdextension.in  myextension.gdextension  myextension.gdextension.uid  project.godot
tests/: CMakeLists.txt
tests/src/engine/: time_test.cpp
tools/: install_godotsteam.py  rename_extension.py  rename_project.py
