file(GLOB_RECURSE SRC CONFIGURE_DEPENDS src/*.cpp)

add_library(myextension SHARED ${SRC})

target_compile_features(myextension PRIVATE cxx_std_20)
set_target_properties(myextension PROPERTIES CXX_EXTENSIONS OFF)

target_include_directories(myextension PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)


target_link_libraries(myextension PRIVATE
    godot-cpp
)

# Determine output directory based on platform
if(ANDROID)
    set(BIN_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/godot/bin/android/${ANDROID_ABI})
elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    set(BIN_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/godot/bin/ios)
else()
    set(BIN_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/godot/bin)
endif()

# Output directly to Godot project
add_custom_command(TARGET myextension POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${BIN_OUTPUT_DIR}
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    $<TARGET_FILE:myextension>
    ${BIN_OUTPUT_DIR}/
)

if(WIN32)
    add_custom_command(TARGET myextension POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        $<TARGET_PDB_FILE:myextension>
        ${BIN_OUTPUT_DIR}/
    )
endif()
